--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
     "markdown-it": "^14.1.0",
-    "next": "^15.3.3",
+    "next": "^15.4.0-canary.59",
     "next-auth": "^5.0.0-beta.27",
     "next-sanity": "^9.11.1",
     "react": "^19.0.0",
